# ext4-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.MIT  README.md  build.rs  extract-test-data  shell.nix
.github/workflows/: rust.yml
examples/: walk.rs
fuzz/: Cargo.toml
fuzz/fuzzers/: inode.rs
scripts/generate-images/: Makefile  gen_image.sh  images.tgz  img-all-types.sh
scripts/structs/: block-group.spec  inode.spec  structs.py  superblock.spec
src/: block_groups.rs  extents.rs  inner_reader.rs  lib.rs  mbr.rs  none_crypto.rs  parse.rs  raw.rs
src/test-data/: gen_image.sh  mbr-ubuntu-raspi3-16.04.img
src/test-data/generated-images/: Makefile  gen_image.sh  img-all-types.sh
tests/: generated-images.rs  times.rs
tests/found/: f_holedir3.img
tool/: Cargo.toml
tool/src/: main.rs
