[package]
authors = ["Chris West (Faux) <git@goeswhere.com>"]
categories = [
    "filesystem",
    "os",
    "parsing",
]
description = "Read information from EXT4 filesystem images"
license = "MIT"
name = "ext4"
readme = "README.md"
repository = "https://github.com/FauxFaux/ext4-rs"
version = "0.10.0"

edition = "2018"

[dependencies]
anyhow = "1"
bitflags = "1"
byteorder = "1"
crc = "1"
positioned-io2 = "0.3"
thiserror = "1"

[dev-dependencies]
bootsector = "0.2"
tempfile = "3"
